; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_kdebug.c_kdebug_abuser_thread.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_kdebug.c_kdebug_abuser_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@continue_abuse = common dso_local global i64 0, align 8
@STRESS_DEBUGID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @kdebug_abuser_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @kdebug_abuser_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = ptrtoint i8* %5 to i32
  store i32 %6, i32* %3, align 4
  store i64 0, i64* %4, align 8
  br label %7

7:                                                ; preds = %10, %1
  %8 = load i64, i64* @continue_abuse, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %7
  %11 = load i32, i32* @STRESS_DEBUGID, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @kdebug_trace(i32 %11, i32 %12, i64 %13, i32 0, i32 0)
  %15 = load i64, i64* %4, align 8
  %16 = add nsw i64 %15, 1
  store i64 %16, i64* %4, align 8
  br label %7

17:                                               ; preds = %7
  ret i8* null
}

declare dso_local i32 @kdebug_trace(i32, i32, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
